challengecontroller fix